--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -26,6 +26,7 @@
         <th>文章内容</th>
         <th>发表者</th>
         <th>发表时间</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -34,6 +35,10 @@
           <td><%= post.content %></td>
           <td><%= post.user.email %></td>
           <td><%= post.created_at %></td>
+          <td>
+            <%= link_to("Edit", edit_group_post_path(post.group, post), class: "btn btn-xs btn-default") %>
+            <%= link_to("Delete", group_post_path(post.group, post), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs") %>
+          </td>
         </tr>
       <% end %>
     </tbody>
